Fixing table length display size (the showing x entries bit) spacing.

--- a/app/assets/stylesheets/snopsize.css
+++ b/app/assets/stylesheets/snopsize.css
@@ -661,6 +661,8 @@ table.dataTable tr.even td.sorting_1 {
 
 .dataTables_length {
 	padding: 10px;
+	padding-left: 18px;
+	padding-bottom: 30px;
 }
 
 .dataTables_filter {
